--- a/src/main/webapp/Common/회원관리.md
+++ b/src/main/webapp/Common/회원관리.md
@@ -1,7 +1,39 @@
 # 회원관리
 ## 일반로그인
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+## 소셜로그인 > 네이버
 내용
-## 소셜로그인 - 네이버
-내용
-## 소셜로그인 - 구글
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+내용  
+## 소셜로그인 > 구글
 내용
