--- a/src/main/webapp/Common/회원관리.md
+++ b/src/main/webapp/Common/회원관리.md
@@ -15,7 +15,7 @@
 내용  
 내용  
 내용  
-## 소셜로그인 > 네이버
+## 소셜로그인(네이버)
 내용
 내용  
 내용  
@@ -35,5 +35,5 @@
 내용  
 내용  
 내용  
-## 소셜로그인 > 구글
+## 소셜로그인(구글)
 내용
